--- a/app/views/shared/rating.erb
+++ b/app/views/shared/rating.erb
@@ -1,5 +1,5 @@
 <div class="rating">
-  <% rating = post[:rating].to_i %>
+  <% rating = post.rating %>
   <% count = 0 %>
   <% 5.times do %>
     <% if rating > count %>
