--- a/public/style.css
+++ b/public/style.css
@@ -127,6 +127,8 @@ ul {
 .comments li {
   border-bottom: solid 1px rgba(100, 100, 100, 0.3);
   padding: 10px;
+  display: flex;
+  justify-content: space-between;
 }
 
 
@@ -228,5 +230,6 @@ input:focus {
   background: #f5e48e;
   padding: 50px;
 }
+
 
 
